Fix styles for card crud pages

--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="col-md-7 mb-2">
       <div class="form-floating">
-      <%= form.text_area :answer, placeholder: "answer", class: "form-control", id: "floatingInputAnswer", style: "height: 100px"%>
+      <%= form.text_area :answer, placeholder: "answer", class: "form-control", id: "floatingInputAnswer"%>
       <%= form.label :answer, "Insert an answer", for: "floatingInputAnswer"%>
     </div>
     </div>
