--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,20 +1,28 @@
 <h1>Edit card</h1>
 <%= form_with model: @card do |form| %>
-  <div class="form-group w-50">
-    <%= form.label :question, class: "form-label" %><br />
-    <%= form.text_field :question, placeholder: "question", class: "form-control" %>
-  </div>
-   <div class="form-group w-50">
-  <%= form.label :answer, class: "form-label" %><br />
-  <%= form.text_field :answer, placeholder: "answer", class: "form-control" %>
-  </div>
-   <div class="form-group w-50">
+  <div class="row">
+  <div class="col-md-5 mb-2 ">
+    <div class="form-floating">
+      <%= form.text_field :question, placeholder: "Question", class: "form-control", id: "floatingInput"%>
+      <%= form.label :question, "Insert a question", for: "floatingInput"%>
+    </div>
+</div>
+<div class="col-md-7 mb-2">
+      <div class="form-floating">
+      <%= form.text_area :answer, placeholder: "answer", class: "form-control", id: "floatingInputAnswer"%>
+      <%= form.label :answer, "Insert an answer", for: "floatingInputAnswer"%>
+    </div>
+    </div>
+    </div>
   <br />
+  <div class="row">
+    <div class="col-md-5">
   <%= form.label :board_id, class: "form-label" %>
   <%= form.collection_select :board_id, Board.order(:name), :id, :name, options = {:prompt => 'Select a board...'}, html_options = { class: "form-select" } %>
-   <br />
   </div>
-  <%= form.submit class: "btn btn-primary"%>
+  </div>
+   <br />
+  <%= form.submit class: "btn btn-outline-primary"%>
 <% end %>
 <br />
 <%= link_to "Back to all cards", cards_path %>
