--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,5 +1,13 @@
 <h1>Card information</h1>
-<h3>Question <%= @card.question %></h2>
-<h3>Card answer: "<%= @card.answer %>"</h2>
+<div class="mb-4 bg-light p-3">
+   <div class="row card-body justify-content-sm-around">
+      <div class="col-4 card-question border shadow-lg rounded">
+        <%= @card.question %>
+      </div>
+      <div class="col-6 card-answer border shadow-lg rounded">
+        <%= md_format(@card.answer).html_safe %> 
+      </div>
+  	</div>
+ </div>
 <br />
 <%= link_to "Back to all cards", cards_path %>
